[package]
name = "serveit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
urlencoding = "2"
base64 = "0.22"

# HTTPS optional via --https
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rcgen = "0.13"

# Select rustls CryptoProvider backend (ring)
rustls = { version = "0.23", features = ["ring"] }
